qwerty mappings, ui improvements, fix stuck key, settings menus etc.

--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@ img {
   cursor:default;
 }
 
+.table-condensed>tbody>tr>td, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>td, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>thead>tr>th {
+  padding:3px 5px;
+}
+
+tr.bg-playnote td {
+  background-color: #dff0d8 !important;
+}
+
 #play_screen {
   position:absolute;
   top:0; right:0; bottom:0; left:0;
@@ -39,6 +47,11 @@ img {
  * NON-MOBILE
  */
 @media (min-width: 768px) {
+
+  .col-main { /* main columns of the Scale Workshop UI */
+    max-height: calc(100vh - 80px);
+    overflow-y: scroll;
+  }
 
   .navbar {
     border-radius: 0px;
